# EcoRetrofit-AI

./: .gitignore  LICENSE  PROJECT_RULES.md  README.md  project_structure.txt  pyproject.toml  requirements.txt  task.md
.github/workflows/: ci.yml
EcoRetrofit-Edge/: vec_normalize_discrete.pkl
data/processed/: rbc_baseline.csv
docker/: Dockerfile.sim  requirements.txt
scripts/: test_env.py  test_noise.py
src/api/: mock_bms.py
src/edge/: .env.example  Dockerfile  bacnet_translator.py  database.py  deploy_edge.py  docker-compose.yml  local_inference.py  requirements.txt
src/edge/models/: ecoretrofit_3M.onnx  ecoretrofit_3M.onnx.data
src/simulation/: generate_massive_dataset.py  noise_wrapper.py  rbc_agent.py  requirements.txt  test_env.py  test_noise.py
src/training/: eval_ppo.py  export_onnx.py  requirements.txt  train_ppo.py
src/web/backend/: .env.example  README.md  main.py  requirements.txt  state.db
src/web/backend/app/: __init__.py  main.py
src/web/backend/app/api/: dependencies.py  routes.py
src/web/backend/app/core/: __init__.py  settings.py
src/web/backend/app/models/: __init__.py  telemetry.py
src/web/backend/app/services/: __init__.py  influx_service.py  savings_service.py  state_service.py  tou_pricing.py
src/web/frontend/: .env.example  README.md  package-lock.json
src/web/frontend/src/app/: layout.tsx  page.tsx
tests/: test_backend_api.py  test_influx_service.py  test_savings_service.py
