[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecoretrofit-ai"
version = "0.1.0"
description = "Edge AI HVAC optimization for commercial building energy control"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
edge = [
    "onnxruntime==1.24.4",
    "numpy==2.4.4",
    "httpx==0.28.1",
    "bacpypes3==0.0.106",
    "influxdb-client==1.50.0",
    "python-dotenv==1.2.2"
]
backend = [
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.35,<1.0",
    "influxdb-client>=1.49,<2.0",
    "python-dotenv>=1.1,<2.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "httpx>=0.27,<1.0"
]
training = [
    "torch>=2.5,<3.0",
    "stable-baselines3[extra]>=2.5,<3.0",
    "gymnasium==0.29.1",
    "sinergym==3.4.0",
    "numpy>=1.26,<3.0",
    "pandas>=2.2,<3.0",
    "scikit-learn>=1.5,<2.0",
    "joblib>=1.4,<2.0"
]
simulation = [
    "sinergym==3.4.0",
    "gymnasium==0.29.1",
    "numpy>=1.26,<3.0",
    "pandas>=2.2,<3.0"
]
dev = [
    "pytest>=8.3,<9.0",
    "ruff>=0.8,<1.0",
    "mypy>=1.13,<2.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/web/backend"]
